WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34785
WebSocket in Worker failed to close
https://bugs.webkit.org/show_bug.cgi?id=34785
Summary
WebSocket in Worker failed to close
Fumitoshi Ukai
Reported
2010-02-09 21:24:20 PST
WebSocket in Worker failed to close.
Attachments
Patch
(8.96 KB, patch)
2010-02-09 23:14 PST
,
Fumitoshi Ukai
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fumitoshi Ukai
Comment 1
2010-02-09 23:14:06 PST
Created
attachment 48466
[details]
Patch
Alexey Proskuryakov
Comment 2
2010-02-10 10:21:51 PST
Comment on
attachment 48466
[details]
Patch
> +# Copyright 2009, Google Inc.
2010. Could this typo cause crashes? If not, is the "if (m_bridge)" check necessary at all? And if it could, is it possible to make a regression test for the crash? r=me
Alexey Proskuryakov
Comment 3
2010-02-10 10:24:08 PST
Please feel free to CC me on WebSocket bugs.
Fumitoshi Ukai
Comment 4
2010-02-11 17:49:09 PST
Committed
r54692
: <
http://trac.webkit.org/changeset/54692
>
Fumitoshi Ukai
Comment 5
2010-02-11 17:57:40 PST
(In reply to
comment #2
)
> (From update of
attachment 48466
[details]
) > > +# Copyright 2009, Google Inc. > > 2010. > > Could this typo cause crashes? If not, is the "if (m_bridge)" check necessary > at all? And if it could, is it possible to make a regression test for the > crash?
I believe it could cause crashes, and "if (m_bridge)" might not be necessary and it's just defensive. should we use assert instead?
Alexey Proskuryakov
Comment 6
2010-02-12 09:45:58 PST
Yes, If it's not necessary, it probably shouldn't be there. I don't think an assertion would be very useful - a crash on the next line is just as good.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug