third_party/WebKit/WebCore/websockets/WorkerThreadableWebSocketChannel.cpp
@@ -85,7 +85,7 @@ unsigned long WorkerThreadableWebSocketChannel::bufferedAmount() const
 
 void WorkerThreadableWebSocketChannel::close()
 {
-    if (!m_bridge)
+    if (m_bridge)
         m_bridge->close();
 }
 
